# mcp-manager

./: README.md  README_ja.md  README_zh.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_config.rs  env_check.rs  lib.rs  main.rs  mcp_runner.rs  mcp_servers.rs  store.rs  tray.rs
src/components/: AvailableServerCard.tsx  ClaudeConfig.tsx  EnvironmentCheck.tsx  HotkeyInput.tsx  InstallButton.tsx  LoadingIndicator.tsx  PageLayout.tsx  ServerCard.tsx  ServerControls.tsx  ServerItem.tsx  ServerList.tsx  ServerListForConfig.tsx  Sidebar.tsx
src/components/ui/: badge.tsx
src/hooks/: useClaudeConfig.ts  useEnvironmentCheck.ts  useServerControl.ts
src/pages/: Config.tsx  Servers.tsx  Status.tsx
src/types/: global.d.ts  index.ts
